--- a/joomla/component/translations/admin/en-GB/en-GB.com_jblesta.ini
+++ b/joomla/component/translations/admin/en-GB/en-GB.com_jblesta.ini
@@ -129,21 +129,21 @@ COM_JBLESTA_CHECKUPDATE_-2="Error checking for updates"
 COM_JBLESTA_INSTALL_VIEW_APICNXN_TITLE="API Connection Check"
 COM_JBLESTA_INSTALL_VIEW_APICNXN_BUTTON_SAVESETTINGS="Save Settings"
 COM_JBLESTA_INSTALL_VIEW_APICNXN_BLESTAAPIURL_TEXT="Blesta Url"
-COM_JBLESTA_INSTALL_VIEW_APICNXN_BLESTAAPIURL_DESC="Enter the complete URL to your Blesta install, including the scheme.  This would be the address that you or your users would enter into the browser to visit your WHMCS site.  For reference, your Joomla site's URL has been entered below."
+COM_JBLESTA_INSTALL_VIEW_APICNXN_BLESTAAPIURL_DESC="Enter the complete URL to your Blesta install, including the scheme.  This would be the address that you or your users would enter into the browser to visit your Blesta site.  For reference, your Joomla site's URL has been entered above."
 COM_JBLESTA_INSTALL_VIEW_APICNXN_BLESTAAPIUSERNAME_TEXT="API Username"
 COM_JBLESTA_INSTALL_VIEW_APICNXN_BLESTAAPIUSERNAME_DESC="Enter an API Username for a Blesta API user (configured in Blesta)."
 COM_JBLESTA_INSTALL_VIEW_APICNXN_BLESTAAPIKEY_TEXT="API Key"
 COM_JBLESTA_INSTALL_VIEW_APICNXN_BLESTAAPIKEY_DESC="Enter the API Key for the Blesta user above (configured in Blesta)."
 COM_JBLESTA_INSTALL_VIEW_APICNXN_STATUSDEFAULT="One Moment Please..."
 ;
-COM_JBLESTA_APICNXN_HELP_NOURL="You didn't enter a URL in the `WHMCS URL` field.  Please enter a URL and the connection wizard will test it for you."
+COM_JBLESTA_APICNXN_HELP_NOURL="You didn't enter a URL in the `Blesta URL` field.  Please enter a URL and the connection wizard will test it for you."
 COM_JBLESTA_APICNXN_HELP_NOUSER="Please enter a username in the field on the left"
 COM_JBLESTA_APICNXN_HELP_NOKEY="Please enter the API Key for the user on the left"
-COM_JBLESTA_APICNXN_HELP_FIXIP="WHMCS is indicating that the IP address of this Joomla install is not allowed access to the API.  To correct this, log into your WHMCS backend, navigate to Setup then to General Settings and click on the Security Tab.  You will need to add the IP address indicated as invalid to the Allowed API Access list."
-COM_JBLESTA_APICNXN_HELP_FIXXS="WHMCS is indicating that the value you entered for the Access Key does not match what it has for the Access Key located in the WHMCS configuration file.  Please recheck and try again."
-COM_JBLESTA_APICNXN_HELP_CREDS="You are connecting to the WHMCS interface properly, but the API username or password are invalid.  Recheck them and try again.  This user can be configured in the WHMCS backend under Setup and Staff Management."
-COM_JBLESTA_APICNXN_HELP_NOAXS="The connection is being made to WHMCS, but the user you are supplying is being denied access to the API.  Please recheck your settings in WHMCS under Setup and Staff Management to ensure the API user belongs to a group that has API Access checked."
+COM_JBLESTA_APICNXN_HELP_ER401="It appears that the API Username and API Key don't match up.  Please recheck them from your Blesta backend and try again."
+COM_JBLESTA_APICNXN_HELP_ER403="The API Username doesn't have access to do basic tasks in Blesta.  Please consider changing the API Username or modifying their permissions."
 COM_JBLESTA_APICNXN_HELP_ER404="The URL you entered returned a 404 error message, indicating it isn't valid.  Please recheck and try again."
+COM_JBLESTA_APICNXN_HELP_ER415="The Blesta application is not permitting connections to it requesting the json format.  You will need to check the settings in your application to resolve this."
+COM_JBLESTA_APICNXN_HELP_ER503="The Blesta application appears to be down for maintenance, you will need to wait until it comes back up to complete configuration."
 COM_JBLESTA_APICNXN_HELP_ER000="The connection to the URL you are attempting to use is being shut down by the server before completing.  This is almost always caused by a firewall or security protocol on the WHMCS server that is preventing access, most commonly mod_security.  You will need to consult your server administrator or security documentation to correct this.  Most common solution is to whitelist the server's IP address to permit access."
 COM_JBLESTA_APICNXN_HELP_DBERR="The error indicates that there was a problem saving the settings to the extension table.  You will need to consult documentation and support services from Go Higher for more information."
 COM_JBLESTA_APICNXN_HELP_SAVED="Your settings are valid and have been saved!"
